# ivs_diffusion

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  linearprobe.py  linearprobe.sh  main_probe.py  pyproject.toml  requirements.txt
configs/hyperparameters/: hyperparameters.py
configs/model/: rf_dit_t2i.yaml  rf_dit_unclip.yaml  uncond.yaml
configs/path_configs/: path_configs.py
configs/warnings/: suppress_warnings.py
dataset/: dataset_loaders.py  dataset_preprocessing.py  imagenet_classes.py  latent_dataset.py  utils.py
diffusion/: __init__.py  linearprobe.py  utils.py
diffusion/dataset/: dataset_preprocessing.py
diffusion/model/: __init__.py  classifier.py  rf.py  t2i.py  transformer.py  unclip.py
diffusion/model/modular/layers/: __init__.py  attention.py  rope.py
diffusion/model/modules/: ae.py  clip.py
diffusion/probing/: classifier.py  linear_probe.py  main_probe.py  utils.py
notebooks/: create_plots.ipynb  sample_t2i.ipynb  sample_unclip.ipynb
probing/: classifier.py  linear_probe.py
scripts/: data.sh  linearprobe.sh
utils/: logging.py
