[tool.poetry]
name = "ivs-diffusion"
version = "0.1.0"
description = "The project explores diffusion transformer models using linear probing to analyze their internal representations. It compares different conditioning mechanisms (image-conditioned, text-conditioned and unconditional)- to determine their impact on learned representations. The project aims to identify which model layers contain the most semantic information and whether conditioning enhances or obscures generalizable knowledge."
authors = ["Ioannis Partalas <partalas.ioan@gmail.com>", "Jeongrim Kim <rim.kim92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
k-diffusion = {git = "https://github.com/crowsonkb/k-diffusion.git", rev = "21d12c91ad4550e8fcf3308ff9fe7116b3f19a08"}
python = "^3.11"
accelerate = "0.30.1"
antlr4-python3-runtime = "4.9.3"
anyio = "4.6.2.post1"
argon2-cffi = "23.1.0"
argon2-cffi-bindings = "21.2.0"
arrow = "1.3.0"
asttokens = "2.4.1"
async-lru = "2.0.4"
av = "10.0.0"
babel = "2.16.0"
beautifulsoup4 = "4.12.3"
bleach = "6.2.0"
braceexpand = "0.1.7"
clean-fid = "0.1.35"
click = "8.1.7"
clip-anytorch = "2.6.0"
colorlog = "6.9.0"
comm = "0.2.2"
contourpy = "1.3.0"
cycler = "0.12.1"
dctorch = "0.1.2"
debugpy = "1.8.8"
decorator = "5.1.1"
decord = "0.6.0"
defusedxml = "0.7.1"
diffusers = "0.31.0"
docker-pycreds = "0.4.0"
einops = "0.8.0"
exceptiongroup = "1.2.2"
executing = "2.1.0"
fastjsonschema = "2.20.0"
fonttools = "4.55.0"
fqdn = "1.5.1"
fsspec = "2024.10.0"
ftfy = "6.3.1"
gitdb = "4.0.11"
gitpython = "3.1.43"
h11 = "0.14.0"
hpack = "4.0.0"
httpcore = "1.0.7"
httpx = "0.27.2"
hydra-core = "1.3.2"
imageio = "2.36.0"
importlib-metadata = "8.5.0"
importlib-resources = "6.4.5"
ipykernel = "6.29.5"
ipython = "8.18.1"
ipywidgets = "8.1.5"
isoduration = "20.11.0"
jaxtyping = "0.2.28"
jedi = "0.19.2"
jinja2 = "3.1.4"
json5 = "0.9.28"
jsonmerge = "1.9.2"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2024.10.1"
jupyter = "1.1.1"
jupyter-console = "6.6.3"
jupyter-events = "0.10.0"
jupyter-lsp = "2.2.5"
jupyter-client = "8.6.3"
jupyter-core = "5.7.2"
jupyter-server = "2.14.2"
jupyter-server-terminals = "0.5.3"
jupyterlab = "4.2.6"
jupyterlab-pygments = "0.3.0"
jupyterlab-server = "2.27.3"
jupyterlab-widgets = "3.0.13"
kiwisolver = "1.4.7"
kornia = "0.7.4"
kornia-rs = "0.1.7"
lazy-loader = "0.4"
markupsafe = "3.0.2"
matplotlib = "3.9.2"
matplotlib-inline = "0.1.7"
mistune = "3.0.2"
mpmath = "1.3.0"
nbclient = "0.10.0"
nbconvert = "7.16.4"
nbformat = "5.10.4"
nest-asyncio = "1.6.0"
networkx = "3.2.1"
notebook = "7.2.2"
notebook-shim = "0.2.4"
nvidia-cublas-cu12 = "12.4.5.8"
nvidia-cuda-cupti-cu12 = "12.4.127"
nvidia-cuda-nvrtc-cu12 = "12.4.127"
nvidia-cuda-runtime-cu12 = "12.4.127"
nvidia-cudnn-cu12 = "9.1.0.70"
nvidia-cufft-cu12 = "11.2.1.3"
nvidia-curand-cu12 = "10.3.5.147"
nvidia-cusolver-cu12 = "11.6.1.9"
nvidia-cusparse-cu12 = "12.3.1.170"
nvidia-nccl-cu12 = "2.21.5"
nvidia-nvjitlink-cu12 = "12.4.127"
nvidia-nvtx-cu12 = "12.4.127"
omegaconf = "2.3.0"
open-clip-torch = "2.29.0"
overrides = "7.7.0"
pandocfilters = "1.5.1"
parso = "0.8.4"
pexpect = "4.9.0"
pillow = "11.0.0"
platformdirs = "4.3.6"
prometheus-client = "0.21.0"
prompt-toolkit = "3.0.48"
protobuf = "5.28.3"
psutil = "6.1.0"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
pygments = "2.18.0"
pyparsing = "3.2.0"
python-json-logger = "2.0.7"
pyzmq = "26.2.0"
referencing = "0.35.1"
regex = "2024.11.6"
rfc3339-validator = "0.1.4"
rfc3986-validator = "0.1.1"
rpds-py = "0.21.0"
safetensors = "0.4.5"
scikit-image = "0.24.0"
scipy = "1.13.1"
send2trash = "1.8.3"
sentry-sdk = "2.18.0"
setproctitle = "1.3.4"
smmap = "5.0.1"
sniffio = "1.3.1"
soupsieve = "2.6"
stack-data = "0.6.3"
sympy = "1.13.1"
terminado = "0.18.1"
tifffile = "2024.8.30"
timm = "1.0.11"
tinycss2 = "1.4.0"
tokenizers = "0.19.1"
tomli = "2.1.0"
torch = "2.5.1"
torchdiffeq = "0.2.4"
torchsde = "0.2.6"
torchvision = "0.20.1"
tornado = "6.4.1"
tqdm = "4.67.0"
traitlets = "5.14.3"
trampoline = "0.1.2"
transformers = "4.41.2"
triton = "3.1.0"
typeguard = "2.13.3"
types-python-dateutil = "2.9.0.20241003"
uri-template = "1.3.0"
wandb = "0.18.7"
wcwidth = "0.2.13"
webcolors = "24.11.1"
webdataset = "0.2.100"
webencodings = "0.5.1"
websocket-client = "1.8.0"
widgetsnbextension = "4.0.13"
zipp = "3.21.0"
zstandard = "0.23.0"
seaborn = "^0.13.2"
pandas = "^2.2.3"
brotli = "^1.1.0"
pyarrow = "^19.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"

[tool.poetry.scripts]
precompute = "dataset.utils:main"
main = "main_probe:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
